--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
 
     <main class="cv-content">
-      <section>
+      <section class="header">
         <h2>Profil</h2>
         <p>
           Passionnée par le digital et la stratégie de contenu, j’accompagne les
